<resources>
    <string name="app_name">ListOfUsers</string>

    <!-- Placeholders -->
    <string name="phone_html_ph">&lt;b>Phone:&lt;/b> %1$s</string>
    <string name="age_html_ph">&lt;b>Age:&lt;/b> %1$s</string>
    <string name="address_html_ph">&lt;b>Address:&lt;/b> %1$s</string>
    <string name="company_html_ph">&lt;b>Company:&lt;/b> %1$s</string>
    <string name="registered_html_ph">&lt;b>Registered:&lt;/b> %1$s</string>
    <string name="lat_lon_html_ph">&lt;b>Latitude, longitude:&lt;/b> %1$s</string>
    <string name="about_html_ph">&lt;b>About:&lt;/b>&lt;br /> %1$s</string>

    <!-- Content description strings -->
    <string name="cd_fruit_icon">Fruit icon</string>
    <string name="cd_eye_color_icon">Eye color icon</string>

    <string name="fav_fruit">Favorite fruit: </string>
    <string name="eye_color">Eye color: </string>
    <string name="friends">Friends</string>
    <string name="details">Details</string>
    <string name="users">Users:</string>
</resources>